                                                        -*- coding: utf-8 -*-
Changes with Apache 2.2.5

  *) mod_cache: Use the same cache key throughout the whole request processing
     to handle escaped URLs correctly.  PR 41475. [Ruediger Pluem]

  *) mod_cache: Add CacheIgnoreQueryString directive.  PR 41484.
     [Fredrik Widlund <fredrik.widlund qbrick.com>]

  *) mod_cache: While serving a cached entity ensure that filters that have
     been applied to this cached entity before saving it to the cache are not
     applied again. PR 40090. [Ruediger Pluem]

  *) mod_cache: Correctly cache objects whose URL query string has been
     modified by mod_rewrite. PR 40805. [Ruediger Pluem]

  *) HTTP proxy ProxyErrorOverride: Leave 1xx and 3xx responses alone.  Only
     processing of error responses (4xx, 5xx) will be altered.  PR 39245.
     [Jeff Trawick, Bart van der Schans <schans hippo.nl>]

  *) htdbm: Enable crypt support on platforms with crypt() but not
     <crypt.h>, such as z/OS. [David Jones <oscaremma gmail.com>]

  *) mod_ssl: initialize thread locks before initializing the hardware
     acceleration library, so the latter can make use of the former. 
     PR 20951. [adunn at ncipher.com]

  *) ab.c: Correct behavior of HTTP request headers sent by ab
     in presence of -H command-line overrides. PR 31268, 26554.
     [Arvind Srinivasan <arvind.srinivasan  sun.com>]

  *) ab.c: The apr_port_t type is unsigned, but ab was using a
     signed format code in its reports. PR 42070.
     [Takashi Sato <serai  lans-tv.com>]

  *) mod_ldap: Remove the hardcoded size limit parameter for
     ldap_search_ext_s and replace it with an APR_ defined
     value that is set according to the LDAP SDK being used.
     [David Jones <oscaremma gmail com>]

  *) core: Correct a regression since 2.0.x in the handling of AllowOverride 
     Options.  PR 41829.  [Torsten Förtsch <torsten.foertsch gmx.net>]
